[package]
name = "ttr_api_check_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.10",features=["json"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
futures = "0.3.21"