[package]
name = "ttr_api"
description = "Easily get data from TTR APIs with this Rust crate!"
version = "1.0.0"
edition = "2021"
authors = ["Vhou-Atroph"]
repository = "https://github.com/Vhou-Atroph/ttr_api-rs"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.10",features=["json"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
futures = "0.3.21"
chrono = "0.4.19"