[package]
name = "ttr_api"
description = "Easily get data from Toontown Rewritten APIs with this Rust crate!"
version = "1.2.1"
edition = "2021"
authors = ["Vhou-Atroph"]
repository = "https://github.com/Vhou-Atroph/ttr_api-rs"
license = "MIT"
exclude = ["tests/*","Cargo.lock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.10",features=["json"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
futures = "0.3.21"